# kabumemo

./: .gitignore  Dockerfile.server  LICENSE  PLAN.md  README.md  README_CN.md  docker-compose.yml  package-lock.json  python  start_kabumemo.bat  start_kabumemo_prod.bat
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: analytics.py  history.py  quotes.py
backend/app/storage/: repository.py  sqlite_storage.py
backend/scripts/: check_data_sync.py  import_json_to_sqlite.py  migrate_currency_groups.py
backend/tests/: test_api.py  test_history.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.vue  main.ts  styles.css
frontend/src/components/: FundsTab.vue  PositionsTab.vue  TabNav.vue  TaxTab.vue  TransactionsTab.vue
frontend/src/components/ui/: BaseDatePicker.vue  BaseSelect.vue  PaginationControls.vue
frontend/src/composables/: usePagination.ts
frontend/src/i18n/: index.ts
frontend/src/locales/: en.json  ja.json  zh.json
frontend/src/services/: api.ts
frontend/src/types/: api.ts
