[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kabucount-backend"
version = "0.1.0"
description = "Local stock trade tracking API"
authors = [{ name = "Kabucount Dev" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.115",
    "uvicorn[standard]>=0.24,<0.30",
    "pydantic>=2.10,<3.0",
    "yfinance>=0.2.54,<0.3",
    "python-dateutil>=2.9,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<0.29",
    "ruff>=0.5,<0.6",
    "mypy>=1.10,<2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning"
]
